# log-viewer-rs

./: .gitignore  Cargo.toml  README.MD  README.md  build.rs  debug.sh  roadmap.npx
docs/screencasts/: 01-open.cast  02-openfile.cast  03-date-highlighting.cast  04-search.cast  05-filter.cast
fluent-integer/: Cargo.toml  LICENSE
fluent-integer/src/: lib.rs
fluent-integer/tests/: main.rs
logv/: Cargo.toml  build.rs  debug-mac.sh
logv-macro/: Cargo.toml
logv-macro/src/: define_action_impl.rs  lib.rs
logv/samples/: test.txt  utf8.txt
logv/src/: immediate.rs  main.rs  shared.rs  test_extensions.rs  utils.rs  welcome.rs
logv/src/actions/: action.rs  action_impl.rs  action_impl_registry.rs  action_registry.rs  copy.rs  cursor_down.rs  go_to_line.rs  help.rs  line_start.rs  mod.rs  open_file.rs  open_filter_dialog.rs  pgdown.rs  scroll_up.rs  search_next.rs  (+6 more)
samples/: syslog  tabs-test.txt  tabs-test2.txt
src/: application_metrics.rs  args.rs  bounded_vec_deque.rs  data_source.rs  data_source_tests.rs  interval.rs  interval_tests.rs  main.rs  model.rs  selection.rs  shared.rs  test_extensions.rs  ui.rs  utils.rs  welcome.rs
src/actions/: action.rs  action_registry.rs  application_metrics.rs  copy.rs  cursor_down.rs  cursor_left.rs  cursor_right.rs  cursor_up.rs  event_display.rs  file_end.rs  file_start.rs  go_to_date.rs  go_to_line.rs  help.rs  line_end.rs  line_start.rs  mod.rs  open_file.rs  open_filter_dialog.rs  pgdown.rs  pgup.rs  pre_action.rs  quit.rs  scroll_down.rs  scroll_left.rs  scroll_right.rs  scroll_up.rs  search.rs  search_next.rs  search_prev.rs  select_all.rs  select_word_backward.rs  select_word_forward.rs  shift_down.rs  shift_left.rs  shift_right.rs  shift_up.rs  test_bgp.rs  word_backward.rs  word_forward.rs
src/advanced_io/: advanced_buf_reader.rs  mod.rs  seek_to.rs
src/assets/: profiles.yaml  welcome.txt
src/background_process/: background_process_builder.rs  background_process_handler.rs  background_process_registry.rs  buffered_message_sender.rs  mod.rs  run_in_background.rs  task_context.rs
src/data_source/: char_navigation.rs  custom_highlight.rs  data_source_tests.rs  line.rs  line_registry.rs  line_source_holder.rs  mod.rs  read_delimited.rs
src/highlight/: date_highlight.rs  highlight.rs  highlighter_registry.rs  mod.rs  pattern_based_highlighter.rs  search_highlighter.rs
src/model/: abstract_go_to_model.rs  bgp_model.rs  cursor_helper.rs  dimension.rs  filter_model.rs  go_to_date_model.rs  go_to_date_model_tests.rs  go_to_line_model.rs  guess_date_format.rs  help_model.rs  metrics_model.rs  mod.rs  model.rs  navigable_searcher_constructor.rs  open_file_model.rs  progress_model.rs  rendered.rs  scroll_position.rs  search.rs  search_model.rs
src/profiles/: action_description.rs  profile.rs
src/search/: mod.rs  navigable_searcher.rs  navigable_searcher_impl.rs  navigable_searcher_tests.rs  regex_searcher_impl.rs  regex_searcher_tests.rs  search_utils.rs  searcher.rs  searcher_impl.rs  searcher_tests.rs
src/ui/: canvas.rs  error_dialog.rs  filter_dialog.rs  go_to_date_dialog.rs  go_to_dialog.rs  help_dialog.rs  line_drawer.rs  main_ui.rs  metrics_dialog.rs  mod.rs  open_file_dialog.rs  progress_dialog.rs  span_producer.rs  status_panel.rs  ui_elements.rs  ui_utils.rs  view_with_callback.rs  with_root_model.rs
(+85 files in other folders)
