[package]
name = "logv"
version = "0.1.0"
authors = ["Ildar Faizov <ildar.faizov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
log4rs = "1.2.0"
termion = "1.5.6"
cursive = "0.17.0"
cursive_table_view = "0.14"
clap = "~2.33"
crossbeam-channel = "0.5.4"
uuid = { version = "0.8", features = ["v4"] }
num-rational = "*"
fluent-integer = { path = "../fluent-integer"}
num-traits = "0.2.14" # TODO transitive dependencies?
terminal-clipboard = "0.3.1"
regex = "1.5"
stopwatch = "0.0.7"
spectral = "0.6.0"
unicode-segmentation = "1.9.0"
human_bytes = "0.4"
paste = "*"
derive_builder = "0.12.0"
anyhow = "1.0.72"
thiserror = "1.0.48"
chrono = "0.4.31"
phf = { version = "0.11.2", features = ["macros"] }
lazy_static = { version = "1.4.0", features = [] }
itertools = "0.12.0"
metrics = "0.22.0"
metrics-util = "0.16.0"
kolmogorov_smirnov = "1.1.0"
ordered-float = "4.2.0"

#[dependencies.cursive]
#version = "*"
#default-features = false
#features = ["termion-backend"]